--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+Version 2.02 (23 February 2011)
+    * Fixed errors in package help file
+    
 Version 2.01 (19 October 2009)
     * Corrected URL errors in help files
-	* Added option to subset.Mdata() to obtain the 111 series used in the M-competition
+	* Added option to subset.Mdata() to obtain the 111 series 
+	  used in the M-competition
 
 Version 2.00 (7 September 2009)
     * Package removed from forecasting bundle
 
-For details of earlier versions, please see the Changelog of the forecast package.
+For details of earlier versions, please see the Changelog of 
+the forecast package.
 
