--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,16 @@
+Version 2.03 (11 August 2011)
+	* Fixed error in plot.Mdata()
+
 Version 2.02 (23 February 2011)
-    * Fixed errors in package help file
+  * Fixed errors in package help file
     
 Version 2.01 (19 October 2009)
-    * Corrected URL errors in help files
+  * Corrected URL errors in help files
 	* Added option to subset.Mdata() to obtain the 111 series 
 	  used in the M-competition
 
 Version 2.00 (7 September 2009)
-    * Package removed from forecasting bundle
+  * Package removed from forecasting bundle
 
 For details of earlier versions, please see the Changelog of 
 the forecast package.
