--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Version 2.05 (15 June 2013)
+  * Fixed an error in time series N2851. The last value was zero but is 6050.25 in the original data (M3[[2851]]$xx[8] <- 6050.25)
+  * Added the forecasts of the original M3 competition
+
 Version 2.04 (19 March 2012)
   * Changes to satisfy new requirements for R-2.15.0.
 
